--- a/src/main/webapp/admin/pricing/index.xhtml
+++ b/src/main/webapp/admin/pricing/index.xhtml
@@ -31,8 +31,14 @@
 
                                             <p:commandButton class="w-100"
                                                              ajax="false"
+                                                             value="Item Vise Fees List"
+                                                             action="#{itemFeeManager.navigateItemViseFeeList}"/>
+                                            
+                                             <p:commandButton class="w-100"
+                                                             ajax="false"
                                                              value="Item Fees List"
-                                                             action="/admin/pricing/manage_item_fees_bulk"/>
+                                                             action="#{itemFeeManager.navigateItemFeeList}"/>
+                                             
                                             <p:commandButton class="w-100"
                                                              ajax="false"
                                                              value="Correct Item Fees"
