--- a/src/main/webapp/admin/pricing/index.xhtml
+++ b/src/main/webapp/admin/pricing/index.xhtml
@@ -39,6 +39,11 @@
                                                              value="Item Fees List"
                                                              action="#{itemFeeManager.navigateItemFeeList}"/>
                                              
+                                             <p:commandButton class="w-100"
+                                                             ajax="false"
+                                                             value="Upload Item Fees"
+                                                             action="#{itemFeeManager.navigateToUploadItemFees()}"/>
+                                             
                                             <p:commandButton class="w-100"
                                                              ajax="false"
                                                              value="Correct Item Fees"
