--- a/src/main/webapp/opd/patient_search.xhtml
+++ b/src/main/webapp/opd/patient_search.xhtml
@@ -197,6 +197,13 @@
                                                                  styleClass="mx-1 mb-2">
                                                     <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
                                                 </p:commandButton>
+                                                <p:commandButton 
+                                                    value="Clinical Data"
+                                                    action="#{patientController.toEmrPatientProfile}"
+                                                    ajax="false"
+                                                    styleClass="mx-1 mb-2">
+                                                    <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
+                                                </p:commandButton>
 
                                             </div>
                                         </div>
